syntax = "proto3";

package proto;

option go_package = "./pb";

import "message.proto";

message ConfigResp {
  bytes yamlEncode = 1;
}

service ConfigService {
  rpc GetConfig(EmptyReq) returns (ConfigResp);
}